--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -2,11 +2,11 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Contacto</title>
+  <title>Inicio - Mi sitio</title>
 </head>
 <body>
-  <h1>Contáctame</h1>
-  <p>Envíame un mensaje a jose@ejemplo.com</p>
+  <h1>Bienvenido a mi sitio web</h1>
+  <p>¡Hola! Este es mi primer sitio hecho a mano.</p>
 
   <nav>
     <a href="index.html">Inicio</a> |
